--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cisco?useUnicode=true&serverTi
 spring.datasource.username=root
 spring.datasource.password=
 
+file.photo.upload=src/main/resources/static/photos/
+file.photo.upload.target=target/classes/static/photos/
+file.photo.view=static/photos/
+file.photo.default=default_user.jpg
+
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
